<resources>
    <string name="app_name">NutriSense</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_hint">Enter your password</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_birthday_date">Enter your birthday date</string>
    <string name="password_invalid">Password cannot be less than 8 characters</string>
    <string name="silahkan_login">NutriSense Login</string>
    <string name="masuk">Login</string>
    <string name="belum_punya_akun">Don\'t have an account?</string>
    <string name="daftar_sekarang">Sign up</string>
    <string name="masuk_sekarang">Login</string>
    <string name="sudah_punya_akun">Already have an account?</string>
    <string name="create_new_story">Create new story</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_process">Logging out…</string>
    <string name="story_photo">Story Photo</string>
    <string name="story_name">Story name</string>
    <string name="story_description">Story description</string>
    <string name="story_date">Story date</string>
    <string name="no_stories_available">No stories available</string>
    <string name="welcome">Welcome,</string>
    <string name="gallery">Gallery</string>
    <string name="capture">capture</string>
    <string name="image_preview">Image preview</string>
    <string name="upload">Upload</string>
    <string name="camera_start_failed">Camera start failed</string>
    <string name="please_choose_a_picture_first">Please choose a picture first</string>
    <string name="please_add_description">Please add description</string>
    <string name="camera_is_not_ready">Camera is not ready</string>
    <string name="capture_failed">Capture failed: %1$s</string>
    <string name="story_uploaded_successfully">Story uploaded successfully</string>
    <string name="error">Error: %1$s</string>
    <string name="story_image">Story image</string>
    <string-array name="array_language">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="flip_camera">flip camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_birthday">Date Birthday</string>
    <string name="title_personal">Complete your personal information</string>
    <string name="weight">Weight</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="complete_personal">Complete</string>
    <string name="welcome_hello">Hello</string>
    <string name="welcome_to_nutrisense">Welcome to NutriSense</string>
    <string name="foods_name">foods_name</string>
    <string name="nutritions">nutrition</string>
    <string name="personal_name">Name :</string>
    <string name="is_name">John Doe</string>
    <string name="personal_weight">Weight :</string>
    <string name="is_weight">70 kg</string>
    <string name="personal_height">Height :</string>
    <string name="is_height">175 cm</string>
    <string name="personal_birthday">Birthday Date :</string>
    <string name="is_birthday">01/01/1990</string>
    <string name="your_personal_data">Your Personal Data</string>
    <string name="success_food_scan">Sucessfull food scan today</string>
    <string name="img_content">img_content</string>
    <string name="food_name">Nama Makanan</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_result_scan">Result Scan</string>
    <string name="menu_camera">Camera</string>
    <string name="height">Height</string>

</resources>